# SEL3-2026-Groep-4

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  README.md  flake.nix  index.html  mkdocs.yml  pyproject.toml  ruff.toml  simulate.sh  simulate_folder.sh  tmp.txt
.agents/rules/: architecture.md  general.md  git-workflow.md  method.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/jax-cpu/: devcontainer.json
.devcontainer/jax-cuda/: devcontainer.json
.devcontainer/jax-rocm/: devcontainer.json
.github/scripts/: prepare_docs.py
.github/workflows/: lint.yml  publish-docs.yml  test.yml  update_hpc_requirements.yml
CONTRIBUTING/: index.html
DEVELOPMENT/: index.html
HPC/: index.html
api/analysis/: index.html
api/environment/: index.html
api/evaluation/: index.html
api/reproduction/: index.html
api/simulation/: index.html
api/tracking/: index.html
api/training/: index.html
configs/: README.md  best_config_so_far.yaml  centralized-final.yaml  default_ppo.yaml  dev_test.yaml  example.json  example.yaml  fully-connected-final.yaml  index.html  main_config.yaml  personal_template.yaml  production_training.yaml  ring-final.yaml
configs/architecture/: centralized.yaml  decentralized.yaml
configs/arena/: default.yaml
configs/environment/: dir_loc_further.yaml  directed_locomotion.yaml  light_escape.yaml
configs/evaluation/: default.yaml  poster.yaml
configs/experiment/: base.yaml  dev_test.yaml  hpc_smoke_test.yaml  (+1 more)
docs/: CONTRIBUTING.md  DEVELOPMENT.md  HPC.md  README.md  reproduction.md
experiments/: PPOTrainer.py  _train_backup.py  simulate.py  train.py
javascripts/: mathjax.js
scripts/: compare_models.py  download_wandb_project.py  evaluate_checkpoints.py  export_hpc_requirements.py  hpc_install.sh  hpc_train.slurm  simulate.py  simulate.sh  train.py
search/: search_index.json
src/: __init__.py  helloworld.py  main.py  ppo.py  simulate.py  train.py
tests/: test_adjacency.py  test_config.py  test_configs.py  test_evaluation.py  test_jax_init.py  test_morphology_render.py  test_network_shapes.py  test_obs_processor.py  test_target_direction.py
vids/: evaluation_metadata.yaml
(+131 files in other folders)
