[project]
name = "2026sel3-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.11, < 3.13"
dependencies = [
    "biorobot==0.4.2",
    "cleanrl>=0.4.8",
    "evosax==0.2.0",
    "flax>=0.12.2",
    "gymnasium>=1.2.3",
    "ipykernel==7.2.0",
    "jax==0.9.0.1",
    "matplotlib==3.10.8",
    "mediapy==1.2.6",
    "optax>=0.2.6",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "tyro>=1.0.10",
    "wandb==0.24.2",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda13]==0.9.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.15.2",
]
